<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#191A20" >
    
    <TextView
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:textSize="20dp"
      	android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
        android:text="@string/favoris"
        android:gravity="center" >
       
    </TextView>
    
    
     <EditText
        android:layout_gravity="center"
       	android:layout_marginBottom="30dp"
		android:textSize="15dp"
        android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:hint="Nouveau Trajet Favoris" 
        android:id="@+id/FavorisPath">
           <requestFocus />
    </EditText>

         <Button
                android:layout_gravity="center"
   			android:layout_marginBottom="5dp"
   			android:layout_marginTop="5dp"
		android:textSize="15dp"
        android:id="@+id/buttonAdd"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:text="@string/add"
        android:layout_weight="1" >
    </Button>
     
     
         <TextView
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:textSize="20dp"
      	android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
        android:text="@string/favorisSupp"
        android:gravity="center" >
       
    </TextView>
    
          <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:prompt="@string/select"
           />
          


          
            <Button
                android:layout_gravity="center"
   			android:layout_marginBottom="20dp"
   			android:layout_marginTop="20dp"
		android:textSize="15dp"
        android:id="@+id/buttonSupprimer"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:text="@string/sup"
        android:layout_weight="1" >
    </Button>

    
            

        
              <Button
                  android:layout_gravity="center"
			android:layout_marginBottom="20dp"
   			android:layout_marginTop="20dp"
		android:textSize="15dp"
        android:id="@+id/buttonRetourF"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:text="@string/retour"
        android:layout_weight="1" >
    </Button>

</LinearLayout>