<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#191A20" >

    <TextView
        android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:textSize="20dp"
      	android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
        android:text="@string/welcome"
        android:gravity="center" >
    </TextView>



    <TextView
        
        android:layout_gravity="center"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="15dp"
		android:textSize="20dp"
        android:text="@string/newUsersMess" 
        android:gravity="center">
        
    </TextView>



    <Button
   
       	android:layout_marginTop="15dp"
		android:textSize="15dp"
		android:layout_marginBottom="50dp"
        android:id="@+id/buttonInsc"
       	android:layout_width="200dp"
		android:layout_height="wrap_content" 
        android:layout_gravity="center"
	    
        android:text="@string/butInscri" >
    </Button>
 

    <EditText
        android:layout_gravity="center"
       	android:layout_marginBottom="10dp"
		android:textSize="15dp"
        android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:hint="Login" 
		android:id="@+id/login">

        <requestFocus />
    </EditText>

    <EditText
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
		android:textSize="15dp"
        android:id="@+id/mdp"
        android:hint="Mot de Passe"
       android:layout_width="200dp"
		android:layout_height="wrap_content" 
        android:inputType="textPassword" />
    
      <Button
        android:layout_gravity="center"
        android:textColor="#0033FF"
        android:textSize="10dp"
        android:id="@+id/buttonMdpOublie"
      	android:layout_width="200dp"
		android:layout_height="30dp" 
        android:text="@string/mdpForg" />
      
    <Button
        android:layout_gravity="center"
        android:id="@+id/buttonConnexion"
      android:layout_width="200dp"
		android:layout_height="wrap_content" 
        android:text="@string/connex" />

</LinearLayout>