<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#191A20" >
    
    
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupChangeAvatar"
        android:orientation="horizontal"
        android:background="#191A20" > 
        
    <ImageView
	 
	 android:layout_gravity="right"
	 
	android:id="@+id/imageprofil"
	 
	android:layout_width="fill_parent"
	android:layout_height="150dp"
	
	 android:gravity="right"
/>
    
    
	<!-- android:src="@drawable/imageprofil" -->

    </LinearLayout>
    
    
      <!--   <EditText
        android:layout_gravity="center"
       	android:layout_marginBottom="30dp"
		android:textSize="15dp"
        android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:hint="Parcourir" 
        android:id="@+id/filechoose">
           <requestFocus />
    </EditText>
    
    -->
    
             <Spinner android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:prompt="@string/select"
             android:hint="@string/select"
              android:layout_gravity="center"
       	android:layout_marginBottom="30dp"
		android:textSize="15dp"
                  />
             
             
      <LinearLayout
        
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupChangeProfilVR"
        android:orientation="horizontal"
        android:background="#191A20" > 
        
      <Button
		android:textSize="15dp"
        android:id="@+id/buttonValiderCA"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/valider"
        android:layout_weight="1" >
    </Button>
     <Button
   
		android:textSize="15dp"
        android:id="@+id/buttonRetourCA"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/retour"
        android:layout_weight="1" >
    </Button>
    </LinearLayout>
 </LinearLayout>