<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:background="#191A20" 
	>
    
	    <TextView
	        android:layout_marginBottom="30dp"
	        android:layout_gravity="center"
			android:layout_marginTop="10dp"
			android:textSize="20dp"
	      	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:text="@string/Warning"
	        android:gravity="center" >
	    </TextView>
	    
	    
	     <EditText
	        android:layout_gravity="center"
	       	android:layout_marginBottom="10dp"
			android:textSize="15dp"
	        android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:hint="Nom" 
	        android:id="@+id/nom"
	     >
	    </EditText>
	    
	      <EditText
	        android:layout_gravity="center"
	       	android:layout_marginBottom="10dp"
			android:textSize="15dp"
	        android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:hint="Prenom" 
	        android:id="@+id/prenom"
	 	>
	    </EditText>
	    
	     <EditText
	       android:layout_gravity="center"
	       	android:layout_marginBottom="10dp"
			android:textSize="15dp"
	        android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:hint="Login" 
	        android:id="@+id/login"
	     >
	    </EditText>
	    
	     <EditText
	        android:layout_gravity="center"
	       	android:layout_marginBottom="10dp"
			android:textSize="15dp"
	        android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:hint="Mot de Passe"
			android:inputType="textPassword" 
	        android:id="@+id/mdp"
	   	 >
	    </EditText>
	    
	     <EditText
	         android:layout_gravity="right"
	       	android:layout_marginBottom="5dp"
			android:textSize="15dp"
	        android:layout_width="260dp"
			android:layout_height="wrap_content"
			android:hint="Adresse email" 
	        android:id="@+id/mail"
	 	 >
	    </EditText>
	    
	     <EditText
	         android:layout_gravity="right"
			android:textSize="15dp"
	        android:layout_width="260dp"
			android:layout_height="wrap_content"
			android:hint="Acteur préféré(OubliPassWord)" 
	        android:id="@+id/reponse"
	 	 >
	    </EditText>
	    
	    <LinearLayout
	        android:id="@+id/layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/group"
	        android:orientation="horizontal"
	        android:background="#191A20" 
	    > 
	        
	      <Button
			android:textSize="15dp"
	        android:id="@+id/buttonOk"
	        android:layout_width="fill_parent"
	        android:layout_height="35dp"
	        android:text="@string/ok"
	        android:layout_weight="1" >
	    </Button>
	    
	     <Button
			android:textSize="15dp"
	        android:id="@+id/buttonRetour"
	        android:layout_width="fill_parent"
	        android:layout_height="35dp"
	        android:text="@string/retour"
	        android:layout_weight="1" >
	    </Button>
	    
	  </LinearLayout>
    
	</LinearLayout>